Add tracing to maven protocol handler and force update for snapshots
Currently if something goes wrong with the maven protocol handler it is
very hard to get a sense of what's going on.

This now enables tracing for m2e and using that in the protocol handler
to allow further analysis in case where things go wrong.